--- a/Assignment 5/fancifymytext.html
+++ b/Assignment 5/fancifymytext.html
@@ -41,7 +41,7 @@
 			<input type="radio" id="fancy" name="fanciness" value="fancy" onchange="applyFancyStyles()">
 			<label for="fancy">FancyShmancy</label><br>
 
-			<input type="radio" id="boring" name="fanciness" value="boring" onchange="applyFancyStyles()">
+			<input type="radio" id="boring" name="fanciness" value="boring" onchange="removeFancyStyles()">
 			<label for="boring">BoringBetty</label><br>
 		</fieldset>
 
